# xonsh-benchmarks

./: .gitignore  .gitmodules  array_size.py  asv.conf.json  bench_helpers.py  bench_utils.py  index.json  info.json  profilers.py  pyproject.toml  readme.md  regressions.xml  trace-memory.py
asv-bench/: mem.py  peakmem.py
benchmarks/: benchmarks.py  mem.py  peakmem.py  timers.py
graphs/arch-arm64/branch-main/cpu-Apple M1/env-XONSH_NO_AMALGAMATE-1/machine-Noortheens-MacBook-Air.local/num_cpu-8/os-Darwin 21.2.0/python-3.10/ram-8589934592/: benchmarks.TimeSuite.time_script.json  peakmem.PeakmemSuit.peakmem_script.json  summary.json  timers.time_interactive_ptk.json  timers.time_interactive_rl.json  timers.time_script.json
graphs/arch-arm64/branch-main/cpu-Apple M1/env-XONSH_NO_AMALGAMATE/machine-Noortheens-MacBook-Air.local/num_cpu-8/os-Darwin 21.2.0/python-3.10/ram-8589934592/: benchmarks.MemSuite.mem_script.json  benchmarks.TimeSuite.time_interactive.json  benchmarks.TimeSuite.time_script.json  mem.TrackSuit.track_parser_size.json  peakmem.PeakmemSuit.peakmem_script.json  summary.json  timers.time_interactive_ptk.json  timers.time_interactive_rl.json  timers.time_script.json
graphs/summary/: benchmarks.TimeSuite.time_interactive.json  benchmarks.TimeSuite.time_script.json  benchmarks.TimeSuite.time_xonsh_interactive.json  benchmarks.TimeSuite.time_xonsh_script.json  mem.TrackSuit.track_parser_size.json  peakmem.PeakmemSuit.peakmem_script.json  timers.time_interactive_ptk.json  timers.time_interactive_rl.json  timers.time_script.json
profilers/: init.py  p_pyinstr.py  p_scalene.py  p_yappi.py
tasks/: bench_tags.py
test_parser_frameworks/: results.md
test_parser_frameworks/lark/: .gitignore  grammar.lark  parse_py.py  sample.py
