[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyperf = "^2.3.1"
psutil = "^5.9.0"
asv = "^0.5.1"
ptyprocess = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# npm run like commands with `poe`
# https://github.com/nat-n/poethepoet
[tool.poe.tasks]
# run basic benchmark for the current branch
run = "asv run"
# compare current commit with main branch. It should have commits
compare = {shell="asv run main..$(git branch --show-current)"}
# view results
view = {shell="asv run && asv publish && asv preview"}
