[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyperf = "^2.3.1"
psutil = "^5.9.0"
asv = "^0.5.1"
ptyprocess = "^0.7.0"
virtualenv = "^20.13.1"
requests = "^2.27.1"
tqdm = "^4.62.3"
prompt-toolkit = "^3.0.28"
Pympler = "^1.0.1"
xonsh = "^0.12.1"
scalene = "^1.5.6"
pyinstrument = "^4.1.1"
yappi = "^1.3.3"
lark = "^1.1.2"
lark-cython = "^0.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# npm run like commands with `poe`
# https://github.com/nat-n/poethepoet
[tool.poe.tasks]
# run basic benchmark for the current branch
run = "asv run --profile --show-stderr"
#
## run for some latest tags
bench = { script = "tasks.bench_tags:main()" }

# compare current commit with main branch. It should have commits.
# this can be helpful during development. set the repo path to local folder and test.
compare = { shell = "asv continuous main $(git branch --show-current)" }

# view results
view = { shell = "asv publish && asv preview" }
push = ["bench", { shell = "asv publish && asv gh-pages" }]
